add websocket isolation integration tests