@@ -1,9 +1,11 @@
 package org.xylan.mailspy.integration.ws;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import org.springframework.messaging.Message;
+import org.springframework.messaging.simp.SimpMessageType;
 import org.springframework.util.MimeType;
 import org.testng.annotations.Test;
 import org.xylan.mailspy.core.impl.domain.EmailReceivedEvent;
@@ -15,6 +17,9 @@ import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.equalTo;
 import static org.springframework.messaging.MessageHeaders.CONTENT_TYPE;
 import static org.springframework.messaging.simp.SimpMessageHeaderAccessor.DESTINATION_HEADER;
+import static org.springframework.messaging.simp.SimpMessageHeaderAccessor.MESSAGE_TYPE_HEADER;
+import static org.springframework.messaging.simp.SimpMessageHeaderAccessor.SESSION_ATTRIBUTES;
+import static org.springframework.messaging.simp.SimpMessageHeaderAccessor.SESSION_ID_HEADER;
 import static org.springframework.messaging.support.NativeMessageHeaderAccessor.NATIVE_HEADERS;
 import static org.xylan.mailspy.integration.common.matchers.MailSpyMatchers.jsonPathMatches;
 import static org.xylan.mailspy.integration.common.matchers.MailSpyMatchers.messageHeaderMatches;
@@ -25,37 +30,40 @@ public class HistoryTopicIntegrationTest extends BaseIntegrationTest {
     @Test
     public void userEmailHistoryTopicShouldReceiveEmailHistoryWhenUserSendsMessageToGetHistoryDestination() {
         runWithWs(
-                (context, ws) -> {
-                    // GIVEN
-                    context.publishEvent(new EmailReceivedEvent(MailSpyEmail.builder()
-                        .id("mailId1")
-                        .build()));
-                    context.publishEvent(new EmailReceivedEvent(MailSpyEmail.builder()
-                        .id("mailId2")
-                        .build()));
+            (context, ws) -> {
+                // GIVEN
+                context.publishEvent(new EmailReceivedEvent(MailSpyEmail.builder()
+                    .id("mailId1")
+                    .build()));
+                context.publishEvent(new EmailReceivedEvent(MailSpyEmail.builder()
+                    .id("mailId2")
+                    .build()));
 
-                    // consume messages on /ws/topic/email
-                    ws.awaitMessage();
-                    ws.awaitMessage();
+                // consume messages on /ws/topic/email
+                ws.awaitMessageSent();
+                ws.awaitMessageSent();
 
-                    ws.sendMessage(Map.of(
-                        DESTINATION_HEADER, "/ws/dest/get-history",
-                        NATIVE_HEADERS, Map.of("userId", List.of("123"))));
+                ws.simulateMessageReceived(Map.of(
+                    DESTINATION_HEADER, "/ws/dest/get-history",
+                    NATIVE_HEADERS, Map.of("userId", List.of("123"),
+                    MESSAGE_TYPE_HEADER, SimpMessageType.MESSAGE,
+                    SESSION_ID_HEADER, "sessionId",
+                    SESSION_ATTRIBUTES, Collections.emptyMap())));
 
-                    // WHEN
-                    Message<?> message1 = ws.awaitMessage();
-                    Message<?> message2 = ws.awaitMessage();
+                // WHEN
+                Message<?> message1 = ws.awaitMessageSent();
+                Message<?> message2 = ws.awaitMessageSent();
 
-                    // THEN
-                    assertThat(message1, allOf(
-                        messageHeaderMatches(DESTINATION_HEADER, equalTo("/ws/topic/user/123/history")),
-                        messageHeaderMatches(CONTENT_TYPE, equalTo(MimeType.valueOf("application/json"))),
-                        messagePayloadMatches(jsonPathMatches("$.id", equalTo("mailId1")))));
-                    assertThat(message2, allOf(
-                        messageHeaderMatches(DESTINATION_HEADER, equalTo("/ws/topic/user/123/history")),
-                        messageHeaderMatches(CONTENT_TYPE, equalTo(MimeType.valueOf("application/json"))),
-                        messagePayloadMatches(jsonPathMatches("$.id", equalTo("mailId2")))));
-                });
+                // THEN
+                assertThat(message1, allOf(
+                    messageHeaderMatches(DESTINATION_HEADER, equalTo("/ws/topic/user/123/history")),
+                    messageHeaderMatches(CONTENT_TYPE, equalTo(MimeType.valueOf("application/json"))),
+                    messagePayloadMatches(jsonPathMatches("$.id", equalTo("mailId1")))));
+                assertThat(message2, allOf(
+                    messageHeaderMatches(DESTINATION_HEADER, equalTo("/ws/topic/user/123/history")),
+                    messageHeaderMatches(CONTENT_TYPE, equalTo(MimeType.valueOf("application/json"))),
+                    messagePayloadMatches(jsonPathMatches("$.id", equalTo("mailId2")))));
+            });
     }
 
 }
